# processX

./: .gitignore  .gitmodules  CHECK_RECENT_DATA.sql  CODEBASE_DIGEST.md  DEBUG_RECENT.md  DEPLOYMENT_CHECKLIST.md  DIAGNOSE_RECENT.md  Hello_.ini  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  RECENT_FLOWSHEETS_TROUBLESHOOTING.md  SUPABASE_SETUP.md  middleware.ts  next.config.ts  package-lock.json  package.json  requirements.txt  test-recent-api.mjs  tsconfig.json
.clerk/.tmp/: keyless.json
ai/: README.md  gpt_test.json  llm_call.py  prompts.py  requirements.txt
app/: globals.css  layout.tsx  package-lock.json  page.tsx
app/Copilot/: page.tsx
app/about/: page.tsx
app/api/chat/: exampleRetrieval.ts  examples.ts  prompts.ts  route.ts
app/api/debug/recent-flowsheets/: route.ts
app/api/flowsheets/: route.ts
app/api/flowsheets/[id]/: route.ts
app/api/flowsheets/[id]/lock/: route.ts
app/api/flowsheets/[id]/versions/: route.ts
app/api/flowsheets/recent/: route.ts
app/api/projects/: route.ts
app/api/projects/[id]/: route.ts
app/api/upload/: route.ts
app/api/webhooks/clerk/: route.ts
app/app/: page.tsx
app/app/(root)/: layout.tsx
app/components/: Footer.tsx  Header.tsx  PDFUpload.tsx  ProcessXWasmApp.tsx
app/components/ui/: card.tsx
app/dashboard/[[...rest]]/: page.tsx
app/dashboard/flowsheets/: page.tsx
app/sign-in/[[...sign-in]]/: page.tsx
app/sign-up/[[...sign-up]]/: page.tsx
app/waitlist/: page.tsx
basic LLM json analysis/: modified_flowsheet.json  withapikey.py
basic LLM json analysis /: final_gpt_test_modified.json  improved_langexample.py  langexample.py  simple_improved.py
cpp/: CMakeLists.txt  CMakePresets.json  README.md
cpp/app/: CMakeLists.txt  ProcessX.ini  gui_chat.cpp  gui_chat.h  gui_common.cpp  gui_common.h  gui_docking.cpp  gui_docking.h  gui_flowsheet.cpp  gui_flowsheet.h  gui_fluids.cpp  gui_fluids.h  gui_log.cpp  gui_log.h  gui_main.cpp  gui_main.h  gui_menu.cpp  gui_menu.h  gui_palette.cpp  gui_palette.h  gui_properties.cpp  gui_properties.h  gui_util.cpp  gui_util.h  gui_window_titles.h  node_editor.h  processX_app.cpp  processX_app_sokol.cpp  themes.h  units.h
cpp/app/assets/app_settings/emscripten/: shell.emscripten.html
cpp/build_wasm_sokol/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
cpp/build_wasm_sokol/app/: Makefile  cmake_install.cmake
cpp/build_wasm_sokol/app/tmp/: shell.emscripten_processX_app.html
cpp/build_wasm_sokol/src/: Makefile  cmake_install.cmake
cpp/build_wasm_sokol/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  processX_tests[1]_include.cmake
cpp/include/processX/: core.h  flowsheet.h  fluids.h  ida_solver.h  kinsol_solver.h  plant.h  registry.h  solver.h  stream.h  types.h  unitop.h  user_data.h
cpp/src/: CMakeLists.txt  core.cpp  flowsheet.cpp  fluids.cpp  ida_solver.cpp  kinsol_solver.cpp  pch.h  plant.cpp  registry.cpp  stream.cpp  unitop.cpp  valve.cpp
cpp/test/: CMakeLists.txt  test_fluids.cpp  test_processX.cpp
lib/: flowsheets.ts
lib/db/: README.md  auth.ts  clerk-helpers.ts  index.ts  organisations.ts  projects.ts  simulation-files.ts  supabase.ts  types.ts  users.ts
public/Examples/: README.md  ambient_air_compression_and_cooling_test.json  component_splitter_test.json  heat_exchanger_test.json  mixer_test.json  multi_valve_test.json  multi_valve_zero_flow_test.json  pump_test.json  recycle_loop_test.json  simple_heat_exchanger_test.json  single_valve_unknown_fin_and_fout_test.json  single_valve_unknown_fout_and_cv_test.json  single_valve_unknown_pin_and_cv_test.json  single_valve_unknown_pout_and_fout_test.json  splitter_test.json
public/wasm_app/: processX_app.html  processX_app.js  processX_app.wasm
public/wasm_app_sokol/: processX_app.js
py/gui/: default_layout.py  flowsheet.py  fluid_packages.py  log.py  main.py  menu_bar.py  unit_operations.py  unit_properties.py  window_state.py
scripts/: build_wasm.sh  build_wasm_sokol.sh
scripts/tests/: test-rag.js  test-rag.mjs
supabase/: schema.sql
supabase/migrations/: 001_add_file_locking.sql  001_add_last_accessed_at.sql  002_update_view_for_last_accessed.sql
types/: pdf-parse-fork.d.ts
